Fix validation errors and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: 'Overpass', sans-serif;
+  font-family: "Overpass", sans-serif;
   line-height: 1.5;
   color: #fff;
   -webkit-text-size-adjust: 100%;
@@ -13,10 +13,12 @@ html {
 
 body {
   background-image: linear-gradient(#ff9500, #ff5e3a);
-  margin: 1.125rem;
+  margin: 0;
+  padding: 0 1.5rem 1.5rem;
 }
 
 section {
+  margin-top: 1rem;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-areas:
@@ -28,7 +30,6 @@ section {
 
 h1 {
   font-size: 2rem;
-  margin: auto;
 }
 
 h2 {
@@ -47,9 +48,9 @@ a {
   list-style-type: none;
   border: .2rem solid rgba(255, 255, 255, .7);
   text-decoration: none;
-  color: #fff;
-  padding: 1.125rem 1rem 1rem ;
-  margin: 0 .5rem;
+  color:#fff;
+  padding: 1.125rem 1rem 1rem;
+  margin: 0 .7rem;
 }
 
 .icon {
@@ -142,7 +143,7 @@ figure {
     padding-top: 5rem;
   }
 
-  figcaption {
+  figcaption a {
     display: block;
 
   }
